# test-download-binary

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
