[package]
name = "download_binary"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
rusoto_core = { version="0.48", default_features = false, features = ["rustls"] }
rusoto_s3 = { version="0.48", default_features = false, features = ["rustls", "deserialize_structs", "serialize_structs"] }
anyhow = "1.0"
tokio = { version = "1.27", features = ["full"] }
url = "2.4"
